--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Curs Git</h1>
     <p>Un paragraf</p>
+    <h2>Github</h2>
+    <h3>Platforma de versionare a codului</h3>
 </body>
 </html>
